[package]
name = "big-mod-exp-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.27.0"
ibig = "0.3.6"
crypto-bigint = { version = "0.6.1" }
num-bigint = "0.4"
num-traits = "0.2"
dashu = "0.4.2"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "arithmetic"
harness = false
